# rust-web-starter

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  cspell.json  docker-compose.override.yaml  docker-compose.prod.yaml  docker-compose.yaml  sqlx-data.json
conf/: default.toml
docker/: wait-for-it
docker/server/: entrypoint.sh
helm/rws/: Chart.yaml  README.md  values.yaml
helm/rws/templates/: NOTES.txt  _helpers.tpl  configmap-dynamic-env.yaml  configmap-dynamic-file.yaml  configmap.yaml  cron.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secrets-dynamic-env.yaml  secrets.yaml  service.yaml  serviceaccount.yaml  worker.yaml
helm/rws/templates/tests/: test-connection.yaml
migrations/: 20221109034210_create_users_table.sql
scripts/: dev-setup  jwt  mk-jwt  mk-rsa-keys
src/: config.rs  console.rs  error.rs  lib.rs  middleware.rs
src/handlers/: users.rs
src/repositories/: users.rs
src/routes/: api.rs  web.rs
