[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-web-httpauth = "0.8.0"
anyhow = "1.0.66"
clap = { version = "4.0.19", features = ["cargo"] }
config = "0.13.2"
derive_more = "0.99.17"
dotenvy = "0.15.6"
futures-util = "0.3.25"
glob = "0.3.0"
jsonwebtoken = "8.1.1"
paperclip = { version = "0.7.1", features = ["actix4", "swagger-ui", "v3"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }

[dependencies.sqlx]
version = "0.6.2"
features = ["postgres", "offline", "runtime-actix-native-tls"]
